--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -12,6 +12,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/BattleGroundLowPolyVersion.BattleGroundLowPolyVersion
-GameDefaultMap=/Game/Levels/BattleGroundLowPolyVersion.BattleGroundLowPolyVersion
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 
