--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -15,3 +15,6 @@ EditorStartupMap=/Game/Levels/BattleGroundLowPolyVersion.BattleGroundLowPolyVers
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 
+[/Script/Engine.PhysicsSettings]
+bSubstepping=False
+
