--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -12,8 +12,18 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/BattleGroundLowPolyVersion.BattleGroundLowPolyVersion
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode_BP.BattleTankGameMode_BP_C
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/GameController/BattleTankGameMode_BP.BattleTankGameMode_BP_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.PhysicsSettings]
 bSubstepping=False
